Backport to 1.16.5 fabric